[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mysqlgrantsdump_lyudaio"
version = "0.0.1"
authors = [
  { name="lyuda io", email="help@elyuda.io" },
]
description = "A Python package to fetch a list of all users and grants from a MariaDB database and output them in a human-readable table format to the console."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  'mysql-connector-python==8.0.32',
  'prettytable==3.6.0',
]

[project.urls]
"Homepage" = "https://lyuda.io"
"Bug Tracker" = "https://github.com/lyudaio/grantsdump"